--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 attrs==24.3.0
+backoff==2.2.1
 blinker==1.9.0
+branca==0.8.1
 cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -13,12 +15,25 @@ click==8.1.8
 Deprecated==1.2.15
 distro==1.9.0
 executing==2.1.0
+filetype==1.2.0
+folium==0.19.4
 frozenlist==1.5.0
+geographiclib==2.0
+geopy==2.4.1
 gitdb==4.0.12
 GitPython==3.1.44
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
 googleapis-common-protos==1.66.0
+grpcio==1.70.0
+grpcio-status==1.70.0
 h11==0.14.0
 httpcore==1.0.7
+httplib2==0.22.0
 httpx==0.28.1
 idna==3.10
 importlib_metadata==8.5.0
@@ -31,6 +46,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 langchain==0.3.14
 langchain-core==0.3.29
+langchain-google-genai==2.0.9
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.5
 langgraph==0.2.61
@@ -47,6 +63,7 @@ multidict==6.1.0
 narwhals==1.21.1
 numpy==2.2.1
 openai==1.59.4
+opencage==3.0.4
 opentelemetry-api==1.29.0
 opentelemetry-exporter-otlp-proto-common==1.29.0
 opentelemetry-exporter-otlp-proto-http==1.29.0
@@ -60,13 +77,17 @@ pandas==2.2.3
 pillow==11.1.0
 pluggy==1.5.0
 propcache==0.2.1
+proto-plus==1.26.0
 protobuf==5.29.2
 pyarrow==18.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.10.4
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -78,11 +99,13 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.22.3
+rsa==4.9
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 streamlit==1.41.1
+streamlit_folium==0.24.0
 tenacity==9.0.0
 tiktoken==0.8.0
 toml==0.10.2
@@ -90,8 +113,10 @@ tornado==6.4.2
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
+uritemplate==4.1.1
 urllib3==2.3.0
 watchdog==6.0.0
 wrapt==1.17.0
+xyzservices==2025.1.0
 yarl==1.18.3
 zipp==3.21.0
